--- a/configs/config_lora_20260105.yaml
+++ b/configs/config_lora_20260105.yaml
@@ -25,8 +25,8 @@ data:
     - type: s3_jsonl
       manifests:
         - s3://andreihuang-us-west-2/benchmark/en/trainset_v3.5_augmented/manifest/manifest.jsonl
-      audio_column: audio
-      text_column: text
+      audio_column: source-ref
+      text_column: transcription
 
     - type: hf
       name: mozilla-foundation/common_voice_13_0
