--- a/configs/config_lora_20260105.yaml
+++ b/configs/config_lora_20260105.yaml
@@ -1,7 +1,7 @@
 seed: 42
 
 model:
-  name_or_path: openai/whisper-small
+  name_or_path: openai/whisper-v3-large-turbo
   language: en
   task: transcribe
   gradient_checkpointing: true
